- added sess(); function ( alias of sess_get() ).
- added $config['sess_die_cookie'] = FALSE; to config.php, If set TRUE all sessions will destroy when the browser closed, added this 
functionality helpers/session/cookie_driver.php and database_driver.php files.
- added $this->db->row_array() and $this->db->next_row(); functions to DB.php
//-----------------------------------------------------------------------------

!!!!!!!!!!!!!!!!!!! NEW TODOS !!!!!!!!!!!!!!!

@todo .. add $this->db->row_array(); ,$this->db->next_row(); result() and result_array(); functions  to userguide.
@todo .. add to user guide php5 method chaining support like this 
echo agent::instance()
->init()
->browser();

echo calendar::instance()
->init()
->generate(2006, 10);

@todo .. add sub loader library support .. loader::app_lib('captcha/securimage');
@todo .. look log_message(); some functions does not work.
@todo .. Add Form_controller (Global) tutorial to user guide .. create a directory called /forms
then create a Form_controller to /parents folder. add common functions to Form controller.
@todo .. add user guide to extending to Core MY_model functionality.
it works in Obullo !
http://www.askaboutphp.com/50/codeigniter-extending-the-native-model-and-make-it-your-own.html 
(CJ Lazell advices)

@todo .. change htaccess rules in userguide DirectoryIndex index.php, index.html
@todo .. Global controllers pattern extends rules, add to userguide..!!!
@todo .. put archived doc meta tag to old user guide base layout ..
@todo .. look at globally set database object from app_controller.
@todo .. change obullo mvc2 names as Obullo GC in web site.            
@todo .. add to GC Map (application flow chart) to web site.                                       
@todo .. session database sql SET userdata field CHARACTER as utf8 into user_guide
CREATE TABLE `ob_sessions` (
  `user_data` text character set utf8 NOT NULL,
) 


NEXT VERSION
----------------------------------------------------------------