@@ -24,7 +24,7 @@ $database['system']['active_record'] = TRUE;
 $database['db']['hostname'] = "localhost";
 $database['db']['username'] = "root";
 $database['db']['password'] = "";
-$database['db']['database'] = "obullo";
+$database['db']['database'] = "example_db";
 $database['db']['dbdriver'] = "mysql";
 $database['db']['dbh_port'] = "";
 $database['db']['char_set'] = "utf8";
